# autonomous-coding

./: .env-example  .gitignore  GENERATING_APP_SPEC.md  README.md  SECURITY.md  agent.py  autocode.py  autonomous_agent.py  base_client.py  claude_sdk_client.py  client.py  copilot_client.py  progress.py  prompts.py  pyproject.toml  security.py  subscription.py  tools.py
PRPs/: github_copilot_integration.md
copilot/: README.md
prompts/: app_spec.txt  app_spec_generator_prompt.md  coding_prompt.md  enhancement_initializer_prompt.md  initializer_prompt.md
