[project]
name = "autonomous-coding"
version = "0.1.0"
description = "Harness for long-running autonomous AI coding with the Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "python-dotenv>=1.0.0",
]

[project.scripts]
autonomous-agent = "autonomous_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]
